# ojwul

./: .gitignore  CMakeLists.txt  LICENSE  README.md
autodiff/: autodiff.m  grad.m  isautodiff.m  ojw_interp2_alt.m  test_autodiff.m  var_indices.m
bitwise/: DataHash.m  bitcount.m  bitwise_hamming.m
classify/: fiksvm_predict.cpp  fiksvm_predict.m  liblinear.m  libsvm.m  linear_predict.m  linear_train.m  roc_curve.m  svm_demo.m  svm_precomp_model.cpp  svm_precomp_model.m  svm_predict.cpp  svm_predict.m  svm_read_sparse.c  svm_read_sparse.m  svm_train.cpp  svm_train.m
cluster/: fast_kmeans.cpp  fast_kmeans.m
edges/: compute_edgels.m  edge_demo.m  edge_grad_max.m  edge_orient.m  edge_scale.m  tensor_voted_edges.m
features/: corners.m  dog.m  extract_features.m  fast_corners.m  harris.m  interest_point_demo.m  refine_subpixel.m
filter/: separable_steerable_filter.m
geometry/: F_from_P.m  KR_from_P.m  P0To1.m  P0toC.m  P1To0.m  P_align.m  P_from_E.m  P_from_H.m  P_interp.m  P_r2j.m  PcTo0.m  PcTo1.m  RPnP.m  calibrated_fivepoint.m  cam_sqdist.m  camera_centers.m  camera_extrinsics.m  clip_line2rect.m  compute_homography.m  dpsimplify.m  epipolar_debug.m  epipolar_demo.m  epipolar_disparity.m  epipolar_error.m  euler2rot.m  expm_srt_3d.cpp  expm_srt_3d.m  expmap2quat.m  expmap2rot.m  gridfit.m  homg.m  homographyHarker.m  icp.m  icp_sim.m  iou.m  lie.m  line_intersect.m  line_plane_intersect.m  map_points.m  msac.m  (+22 more)
graphics/: add_datatip.m  bplot.m  clickA3DPoint.m  ds2fig.m  fcw.m  fill_triangles.cpp  fill_triangles.m  fill_triangles_demo.m  imstereo.m  ojw_texture_map.m  render_camera.m  render_camera_trajectories.m  render_circles.m  render_confusion.m  render_coordinate_frame.m  render_depthmap.m  render_frame.m  render_lines_points.m  render_mesh.m  select3Dpoints.m  vol3d.m
image/: convert2gray.m  filter_subsample.cpp  filter_subsample.m  image_alignment_demo.m  imdilate_.m  imfiltsep.m  imgrad.m  imnonmaxsup.m  imnorm.m  imwarp.m  interp2_methods.hpp  ojw_box_pyramid.m  ojw_gaussian_pyramid.m  ojw_interp2.cpp  ojw_interp2.m  ojw_interp2_debug.m  shifted_interp2.m  shifted_interp2_mex.cpp  shifted_interp2_mex.m
io/: fopens.m  get_user_dir.m  get_user_path.m  json_read.cpp  json_read.m  json_write.cpp  json_write.m  load_field.m  loadh5.m  qdelete.m  qmkdir.m  read_bin.m  read_float32.m  read_ply.m  read_wobj.m  saveh5.m  stlread.m  write_bin.m  write_text.m  write_wobj.m
linear/: chol22n.m  cross.m  det33n.m  dot.m  eig22n.m  inv22n.m  inv33n.m  inv44n.m  invSE3n.m  isposdef.m  linear_regressor.m  pca.m  tmult.m  whiten.m  whiten_srt.m
mesh/: mesh_area.m  mesh_sample_random.m  mesh_sample_regular.m
numeric/: all_finite.m  array_snake_indices.m  dimsel.m  extremum.m  first.m  gauss_mask.m  isapprox.m  normalize.m  normd.m  range01.m  sqdist2closest.m
optimize/: cd_learn_normal.m  dp_pair_chain.cpp  dp_pair_chain.m  fmincg.m  fminlbfgs.m  global_basin.m  lapjv.m  qpbo.cpp  qpbo.m  simulated_annealing.m  trw_bp.cxx  trw_bp.m
stats/: betafit_fast.m  fit_gaussian.m  tstat3.m
symbolic/: auto_diff.m  auto_jacobian.m  epipolar_disparity_symeq.m  expm_srt_3d_sym.m  expm_sym.m  line2line_symeq.m  line_intersect_symeq.m  line_plane_intersect_symeq.m  point2line_symeq.m  rodrigues_sym.m
utils/: add_genpath_exclude.m  bsxfun.m  cache2disk.m  col.m  compile.m  disp_struct.m  fcw.m  find_first.cpp  find_first.m  im2mov.m  (+14 more)
(+46 files in other folders)
